Refactor code structure for improved readability and maintainability

--- a/交易体系笔记/笔记.md
+++ b/交易体系笔记/笔记.md
@@ -74,3 +74,101 @@
 止损，保命。
 
 执行，才赢。
+
+---
+
+## 结构与幅度
+
+很多人看到短期涨幅大，就下意识认为行情很强，怕错过。但实战中，真正决定行情空间和延续性的，不是涨了多少，而是价格结构有没有完成切换。
+
+结构一旦建立，多头才有延续的基础。否则哪怕一口气涨了20%、30%，也可能是从底部反弹、空头回补、流动性推动等多种短期力量构成，无法简单理解为趋势确立。
+
+所以在判断行情强弱时，顺序一定要放对：先看结构有没有成立，再看幅度表现，不要本末倒置。
+
+---
+
+## 风险的本质
+
+涨，不是风险；跌，也不是风险。
+
+大阳线的快速拉升，不是风险；大阴线的无量下跌，也不是风险。
+
+每一根K线背后，都是无数交易者的多空博弈，不论价格向上还是向下，都有人在赚钱。
+
+涨跌只是市场的客观表达，它本身不会让你亏钱。
+
+真正让你亏钱、让你承担风险的，是你在这些涨跌中做出的错误决策。脱离交易策略框架，用不能承受的资金去冒险，或者盲目、情绪化地下单。
+
+这些行为不是不能赚钱，而是选择与概率为敌。长期下来，没有任何交易优势。
+
+所以，真正的风险从来不是市场的涨跌，而是你自己。
+
+---
+
+## 交易的本质
+
+技术分析的流程，不是机械地套模板，而是用一套从大到小的观察顺序，把市场局势拆解清楚。
+
+先从大周期入手，建立宏观的价格框架，再标注当前价格附近的关键支撑和阻力。接着判断趋势方向，可以借助趋势线或均线，明确市场的主要运行倾向。
+
+有了方向，还需要识别结构形态，尤其是靠近当前价格的区域，因为那是后续操作的主要战场。技术指标只作为补充，用于量化强弱或验证结构信号，避免过多干扰。
+
+在观察走势时，要注意谁在主导市场，以及技术信号与结构的契合度，结合这些形成对行情延续可能性的判断。
+
+最后，通过风险管理工具验证交易计划的可行性，并在价格进入关键区域前设置好预警。
+
+整个过程像一张逐层缩放的地图，先定大框，再找路径，最后确认落点。
+
+![alt text](image-1.png)
+
+---
+
+## 空仓
+
+如果现在是空仓怎么办？
+
+第一步不是急着进场，而是先用EMA均线组作为价格防线，这样无论你选择追多还是等回调，都能明确止损位置。
+
+第二步，时间周期建议关注1小时和4小时，这两个周期既能看清结构节奏，又能避免被5分钟、15分钟的短线波动干扰。
+
+第三步，等价格回踩EMA均线组并企稳，或者突破后回踩确认支撑时，再考虑逐步进场，这样盈亏比和胜率会更有保障。
+
+这样做的好处是，不会因为焦急而在高位盲目追单，同时也能确保一旦行情反转，有清晰的退出机制。
+
+说得更简单一点，只要你能找到止损就不存在踏空。踏空是分析师赚流量的话术。
+
+---
+
+## ABC模式
+
+在技术分析里，我们经常用一些极简表达来降低彼此沟通的成本。
+
+比如最经典的“ABC模式”：如果A出现并触发B条件，那么C大概率会发生。这样的表达就像地图上的直线，干净、简单、没有噪音。
+
+可到了真实交易里，事情往往没那么直线。听起来很顺的ABC，一进场就可能变成A-B-扫损-D-E，然后才有可能到C。
+
+为什么？因为这种模式只是分析框架，用来描述市场结构的逻辑，而不是一份可直接执行的交易计划。
+
+真正决定一笔交易盈亏的，是第二步找到具有统计优势的下单点。
+
+这一步不仅要满足技术条件，还要结合历史数据、盈亏比、胜率验证，甚至盘中波动的节奏去筛选时机。
+
+问题是，这部分工作枯燥、耗时、需要计算（大部分人对数字不忙敏感，更讨厌数学）因此，现实中大多数人要么不具备这样的能力，要么本能地抗拒去做，所以才会在看分析时觉得简单，实盘操作时却屡屡碰壁。
+
+最后，回到你的问题。从分析角度看，你的理解没错；但站在交易的角度，我需要等到具有统计优势的看涨数据站在我这边，那才是下单的信号。
+
+---
+
+## 止盈止损
+
+加速上涨的标的，小额止盈，上调止损。
+
+震荡上涨的标的，小额止盈，不调止损。
+
+微利震荡的标的，不加仓位，不调止损。
+
+浮亏状态的标的，不加仓位，不调止损。
+
+---
+
+##
