Refactor code structure for improved readability and maintainability

--- a/交易体系笔记/笔记.md
+++ b/交易体系笔记/笔记.md
@@ -171,4 +171,53 @@
 
 ---
 
+## 交易的代价
+
+很多交易者知道自己的坏习惯，却很少正视它们的代价。
+
+过度交易，往往是情绪在驱动，而不是信号。
+
+不跟计划，是把偶然当必然。
+
+过早或过迟入场，本质上都是害怕错过机会。
+
+报复性交易，则是试图用市场替自己“出气”。
+
+不做复盘，就是放弃了从错误中提炼经验；提前手动止损，则是对自己的交易体系缺乏信任。
+
+坏习惯不可怕，可怕的是在毫无察觉中一遍遍重复。等情绪被推到临界点，思考彻底停摆，最后一把梭哈“死了算了”
+
+![alt text](image-2.png)
+
+---
+
+## 进步
+
+不敢开单，不一定是退步，很多时候是进步，是尊重市场的表现。
+
+每天的市场的波动，你可以找到100%的分析理由，但真正值得出手的机会，也许只有20%，甚至更少。
+
+行情分析≠交易机会
+
+等你真的意识到，大多数波动只是噪音，你会发现，减少出手频率反而赚了更多的钱
+
+---
+
+## 保持冷静
+
+每一次做单前，我都会刻意提醒自己：保持中性，保持客观，不能因为欲望或情绪去解读市场。
+
+---
+
+## 学交易
+
+很多人误以为“学交易”就是少做、等机会、忍情绪，这让这条路听起来像苦行僧式的生活
+
+其实不是，真正的学，是构建一个可以复制、可以迭代、基于现实的交易系统。
+
+不是靠直觉出手，而是靠结构驱动决策；不是靠状态强势，而是靠规则执行
+
+---
+
 ##
+
