Add live streaming outline for video creation tutorial
- Define objectives and expected results of the live stream
- List products for sale during the stream
- Outline the structure of the live stream, including introduction, self-introduction, and breakdown of key topics such as content selection, scriptwriting, filming, and editing
- Emphasize the importance of understanding how to replicate successful video strategies

--- a/交易体系笔记/笔记.md
+++ b/交易体系笔记/笔记.md
@@ -219,5 +219,51 @@
 
 ---
 
+## 心态
+
+新手总是纠结这一笔赚不赚钱、准不准，心态也跟着起伏。
+
+但真正能稳定的人，早就不再靠“每一笔对不对”来判断自己好不好—而是看：这一系列交易，最终有没有让账户净值稳步推高。
+
+就像图里这些箭头，不是每根都能赚钱，但组合起来是正向累积的。
+
+亏损可以有，连续亏损也正常，但关键是你能不能熬得住、守得稳，并在关键行情来时一击推进，吃出趋势。
+
+![alt text](image-3.png)
+
+---
+
+## 风控
+
+我的核心交易理念：不预测涨跌，只在交易系统内做高赔率博弈。
+
+那既然市场不可预测，就得接受它随时会“抽风”，所以我唯一能做的，就是把风控做到极致。
+
+每笔单子风险都控制在总资金的1%以内，以损定仓。
+
+先算清楚风险，再谈赚钱。
+
+这不是谦虚，是我能活到现在、还愿意长期留在牌桌上的唯一方式。
+
+---
+
+## 复杂的策略不一定赚钱
+
+「复杂的策略不一定赚钱，骗人的逻辑一定要简单」。
+
+“大道至简”这句话，如果脱离上下文，本质上是一种误导。
+
+从“道理”层面看，交易确实不复杂。买低卖高、顺势而为、止损止盈、盈亏比大于1—这些逻辑人人都懂，听起来简单。
+
+但从“执行”层面看，交易极其困难。真正该下单的时候你恐惧，真正该止损的时候你侥幸，真正连续止损后你就不敢进场了。
+
+你以为自己缺的是技术，实际上你卡的是情绪、判断和一致性。
+
+所以，交易从来不是“简单”，而是你必须把复杂的事，做到看起来很简单。
+
+![alt text](image-4.png)
+
+---
+
 ##
 
