Refactor code structure for improved readability and maintainability

--- a/交易体系笔记/笔记.md
+++ b/交易体系笔记/笔记.md
@@ -265,5 +265,212 @@
 
 ---
 
+## 结构与概率 
+
+价格走势并不是完全随机跳动，而是由结构环环相扣构成的。
+
+比如这张图，从上升楔形到假突破，再到支撑跌破、回测阻力、最后确认下行，这就是一个完整的走势演化链条。
+其中的关键有两点：
+
+第一，支撑和阻力的转换。一旦跌破，后续回测往往会变成反向压力。
+
+第二，形态和位置的共振。楔形、头肩顶本身只是形态，真正决定后续方向的，是它们与关键支撑阻力的配合。
+
+换句话说，研究走势结构的价值，不在于死记某个形态，而在于读懂：支撑和阻力是否被突破，以及回测是否确认。这才是交易里真正能转化为胜率的关键。
+
+---
+
+## 交易的七个步骤  
+
+规划一笔交易，首先要明确交易的时间窗口。短线日内，波段，还是趋势，周期决定了持仓时长和容忍的波动幅度。
+
+接着判断价格所处的环境，是震荡还是趋势。震荡区间适合低吸高抛，趋势环境则要顺势而为。
+
+第三步是确定风险敞口。新手阶段仓位别超过总资金的0.5%，普通行情1%，极端送钱行情才会放大到2%。
+
+第四步是确认交易的市场品种，不同资产波动率和流动性差别巨大，股、债、期货、期权不能混为一谈。
+
+第五步是决定入场方式。常见有回调介入、突破跟进、左侧预判或右侧确认，背后考验的是你对概率与成本的取舍。
+
+第六步是止损。止损不只是一个数字，而是位置逻辑，通常设在前高或前低之外，确保一旦被打掉，就是走势结构彻底被破坏。
+
+最后是止盈。至少要保证盈亏比在1.5:1以上，行情强势时可以用移动止盈或超买超卖指标锁定利润。
+
+这七步组合起来，才是一笔完整、可复盘、可复制的交易。
+
+![alt text](image-6.png)
+
+---
+
+## 交易的核心要素
+
+看得远，拿得住，做得成。 
+
+对应：眼光、心态、行动。
+
+想要在投机市场长期盈利：
+
+三者俱备，逆天改命。 
+
+占其两项，稳步盈利。 
+
+仅得其一，胜负难定。
+
+---
+
+## 趋势的起点
+
+真正的趋势行情，往往是在震荡中悄然酝酿。
+
+价格通过一段时间内高低点持续抬高（多头）或不断降低（空头），并反复测试关键结构位，逐步打破多空平衡。
+
+最后那根大阳线或大阴线，只是结果而已。
+
+也就是说，真正的起点，其实早就在那段你嫌烦的震荡里了。
+
+---
+
+## 趋势的起点
+
+趋势=上涨+回调+再加速。
+
+趋势延续的核心在于：市场从来不会一口气走完，而是不断通过回调来换手。
+
+真正的买点，往往出现在别人犹豫、甚至怀疑趋势是否还能走下去的时刻。
+
+你要做的不是预测回调什么时候结束，而是在关键支撑位出现止跌信号时果断上车，同时设好止损。
+
+这样你既能抓住趋势延续，又能在错误时付出有限代价。
+
+![alt text](image-7.png)
+
+---
+
+## 交易与分析的区别
+
+分析是分析，交易是交易，两者不是一回事。
+
+分析本身并不一定要求你立刻去下单，它更多是一个独立的筛选过程，让你看清市场机会。
+
+与之相对应的，交易则是在分析基础上做出的实际行动。
+
+但能不能执行这笔交易，还要看你对风险的理解、你的时间安排、你的性格特点以及你的整体交易策略。
+
+有时候机会是客观存在的，但基于这些个人因素，你可能会选择不去执行它。
+
+---
+
+## 止损的意义
+
+被扫损并大多数时候都源于开单逻辑本身存在问题。
+
+常见的几种情况无非是以下几点：
+
+一，止损设置过小。想做趋势行情，却依旧用短线思路的止损，一旦波动加大就轻易被扫出局。
+
+二，仓位过大。期望入场后价格立刻远离成本线，抓住所谓的“起爆点”，结果反而让自己在浮亏时承受过大的心理压力。
+
+三，基本功不扎实。错了一次后，心态失衡，不敢继续执行既定策略，陷入恶性循环。
+
+无论被扫损的原因是什么，本质上都只是交易过程中的一个细节。但你有一点值得肯定：你单单设置止损，已经让你站在了交易者的合格门槛上。
+
+大多数人之所以亏到无法翻身，不是因为止损打得多，而是因为根本不设止损，任由亏损无限放大，最后连翻身的机会都没有。
+
+---
+
+## 移动止损
+
+移动止损是我最喜欢的交易手法之一。
+
+当价格不断创新高时，止损跟随上移，把已经到手的利润逐步锁定。
+
+这样做的好处在于：趋势延续时，你不会过早出场，能够跟上更大的行情。
+
+而一旦价格反转，移动止损会自动触发，守住已经积累的盈利。
+
+常用的移动止损方法有两类：
+
+价格形态：稍显主观，但一旦行情反转，能最大程度保住利润；
+EMA20/50:客观固定，能有效避免被短期波动插针扫掉。
+
+两者各有优缺点，都值得使用，关键是通过实战找到最适合自己的方式。
+
+![alt text](image-9.png)
+
+---
+
+## 交易的捷径
+
+《屈身守分，以待天时》。
+
+在投机市场里想获得成功，唯一的捷径，就是不走捷径。
+
+应该以百单、千单为单位，去设计和执行刻意训练的流程。
+
+精确计算仓位，机械化执行，打好每一笔交易。
+
+赚了，就是对逻辑的验证；亏了，就是经验的积累。
+
+只要赶上一轮行情，就有机会实现阶级的跨越。
+
+---
+
+## 周期分析
+
+大周期把握整体方向，小周期提供精确的入场点。
+
+以月线为例：它由大约30根日线组成。月线的开盘价，就是这30天里第一天的开盘；最高价和最低价，分别是这30天里出现的最高点和最低点；收盘价，就是最后一天的收盘。
+
+对交易者来说，这一点至关重要。小周期能展现波动的细节，但容易陷入噪音（追涨杀跌）。大周期能把握整体方向，却缺少精确的入场点。
+
+所以，做交易不能只盯一个周期。
+
+先用大周期判断趋势，再用小周期寻找入场时机，才能同时兼顾方向与执行，形成完整的操作逻辑。
+
+![alt text](image-10.png)
+
+---
+
+## 交易原则
+
+以统计优势为矛，以风险管理为盾。
+
+不预测下一根K线，不因单笔盈亏定输赢.
+
+机械执行计划，在市场中不断进行正期望的博弈。
+
+---
+
+## 交易计划
+
+在市场里，没有交易计划就贸然下单，几乎等于赌博。一个合格的计划，至少要覆盖五个方面：
+
+第一，入场与出场：你要明确什么位置进场，什么条件出场，止损、止盈和移动止损都要写清楚。
+
+第二，风险控制：包括仓位大小、单笔风险上限、总持仓数量，以及面对重大新闻时如何处理。
+
+第三，保持专注：确定你要交易的市场与周期，避免见什么都想做。（趋势能赚钱，震荡也能赚钱。但没有人能做到每一笔都赚）
+
+第四，市场状况：清楚自己在哪种行情条件下出手，趋势、震荡还是波动剧烈的环境。
+
+第五，成长与目标。交易是追求收入，还是长期增值？是全职还是副业？如何在盈利、亏损和储蓄之间找到平衡？
+
+换句话说，一个完整的交易计划，不是喊口号，而是要能回答：你凭什么进场？怎么控制风险？目标是什么？
+
+![alt text](image-11.png)
+
+---
+
+## 交易机会
+
+持续稳定赚钱的前提，是标的本身“走得有规律”。
+
+什么叫有规律？
+尊重价格结构、尊重信号、尊重均线，跌有逻辑、涨有预期。
+
+反之，像那种一波流、频繁插针、均线乱穿的币，赚钱了也是凭运气。
+
+---
+
 ##
 
