Refactor code structure for improved readability and maintainability

--- a/交易体系笔记/笔记.md
+++ b/交易体系笔记/笔记.md
@@ -472,5 +472,152 @@ EMA20/50:客观固定，能有效避免被短期波动插针扫掉。
 
 ---
 
+## 交易框架
+
+时间周期决定你看的是什么。
+
+风险管理决定你扛得住什么。
+
+交易模式决定你适合做什么。
+
+入场逻辑决定你的盈亏比。
+
+止盈止损决定你如何生存。
+
+以上5件事，决定一个交易者的命运。
+
+---
+
+## 六个核心维度
+
+系统性提升交易能力，绕不开六个核心维度：
+
+一、时间周期
+你做的周期决定你能参与的机会类型和节奏快慢。
+•短线（30秒~15分钟）：适合高频波动，考验执行力
+•波段（1小时~4小时）：适合日内或隔夜操作，兼顾效率与稳定
+•趋势（4小时~日线）：侧重节奏与结构，适合更长持仓周期
+
+二、资金规模
+风险控制的根基，直接决定容错空间。
+•     刚开始建议每笔控制在总资金的0.5%~1%风险
+•熟练之后可逐步上调到1%~2%，但必须配合高执行力和清晰策略
+
+三、交易模式
+交易模式决定你专注哪类行情。
+•趋势策略：顺势操作，专注动能爆发
+•震荡策略：反向操作，寻找高赔率反转
+
+四、交易市场
+不同市场对节奏、工具和策略要求不同。
+•期货适合放大杠杆、短期套利
+•现货适合低频持仓、趋势交易
+•期权适合结构化风险管理或特殊策略
+
+五、入场方式
+入场逻辑必须明确，不依赖模糊判断。
+•回调进场：风险低，但确认慢
+•突破进场：确认快，但容错低
+•均线型：适合系统化、多样化回测的人
+
+六、盈利目标
+提前规划出场方式，是避免情绪干扰的必要手段。
+•固定止盈：适合计划性强、规则化交易
+•跟踪止盈：适合持有趋势单，追求波段收益
+
+![alt text](image-12.png)
+
+---
+
+## 技术指标对比
+
+这张图对比了两种常见的技术指标：布林带和SAR。
+
+它们的逻辑完全不同，适用场景也几乎相反。用错节奏，很容易反着做单。
+
+布林带：逆势思维，适合震荡行情
+
+它围绕价格波动构建“震荡区间”，上下轨不是趋势确认，而是过度波动的提醒。
+
+价格靠近上轨，不是追多信号，而是高位警惕；贴近下轨，也更可能是超跌回归。
+
+适合横盘震荡中高抛低吸，但在趋势行情中，极容易逆势被套。
+
+SAR：顺势思维，适合趋势行情
+
+SAR像是一条不断调整的“假想止损线”，只要价格突破点位，就视为趋势转向。
+
+它不预测顶部或底部，但一旦趋势展开，能稳稳跟住方向。
+
+问题是，震荡市里经常被来回扫损，容易失去节奏感。
+
+怎么选？关键看行情节奏
+
+横盘震荡、波动反复 → 用布林带，做“回归”
+
+趋势延续、方向明确 → 用SAR，跟“突破”
+
+但最关键的，不在指标，而在你自己。
+
+别一边想用SAR吃趋势的钱，一边又眼馋布林带里的震荡利润。
+
+这种贪多的操作，最后往往是两边都挨打。
+
+交易的核心从来不是“用更多”，而是“打得准”。选一套适合自己资金、节奏、风控能力的策略，打熟打透，反复做，
+
+哪怕就这一套，也足以赚到很多钱。
+
+![alt text](image-13.png)
+
+---
+
+## 认知入口
+
+技术分析的四种基本派别，背后的核心思路可以归为四类“认知入口”：
+
+1.划线：空间与节奏的界定工具，强调“趋势线、区间、通道”等可视化结构，用来判断方向、节奏与拐点位置。它关注的是价格的“运行轨道”，适合趋势型策略建立大框架。
+
+2.形态：价格行为的结构剧本以头肩、双顶、杯柄等形态识别市场情绪的演进过程，目的是判断“结构性拐点”，强调价格行为的模式化演绎，适合反转与突破类策略。
+
+3.K线：市场短期情绪的压缩片段，单根或组合K线用于捕捉“微观搏杀的结果”，如锤子线、吞没形态、十字星等，短线节奏把握用得最多，但需结合上下文解读，不能单用。
+
+4.指标：数据平滑与量化提取，属于“衍生型判断”，把价格或成交量做加工处理后形成的辅助参考，优点是清晰客观，缺点是延迟或钝化。适合趋势跟随或背离捕捉。
+
+最忌四种混杂判断、信号打架。
+
+![alt text](image-14.png)
+
+---
+
+## 交易守则
+
+真正能长期留在市场上的人，不靠每一单的胜率，而靠一套可执行、可恢复、可持续的行为框架。
+
+图中这些“守则”，不是行为建议，而是“保命指南”。
+
+第一层，是策略边界。所有交易必须源自清晰策略，否则不入场。执行前不合逻辑，执行后容易后悔。
+
+第二层，是节奏控制。每日复盘，非交易日也应维持观察力；限制交易时长，是为了防止注意力稀释后做出情绪交易。
+
+第三层，止损后的休息，不是缓解情绪，而是切断“连续决策”带来的惯性冲动（情绪化开单）；而回看3至5天，是重新找回行情的周期框架，避免被一时走势带节奏。
+
+真正的高手，永远处于“下一次可以重新出手”的状态。
+
+交易不是打满每一枪，而是保住子弹、挑好目标、选好时间。
+
+![alt text](image-15.png)
+
+---
+
+##
+
+理性交易：审慎建仓 → 小幅止盈 → 上调止损 → 择位加仓 → 回归止盈
+
+赌徒交易：听风是雨 → 模糊下注 → 情绪跟盘 → 怨天尤人 → 重复循环
+
+交易不容易，谁都曾在情绪里打过转。但只要你开始记录、复盘、用逻辑替代冲动，那就是走在越来越理性的路上。
+
+---
+
 ##
 
